console/plugins/kml: Clean URL construction future deprecation.